# Intelligent-system-core

./: .editorconfig  .env.example  .gitignore  .gitmessage  .templatesyncignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md
.claude/: settings.json
.claude/agents/: adoption-judge.md  reviewer.md
.claude/hooks/: auto-format.sh  block-dangerous.sh  block-secret-read.sh  protect-agent-config.sh
.claude/rules/: agent-config-changes.md
.claude/skills/: README.md
.claude/skills/adr/: SKILL.md
.claude/skills/handoff/: SKILL.md
.claude/skills/incident/: SKILL.md
.claude/skills/intake/: SKILL.md
.claude/skills/spec/: SKILL.md
.cursor/rules/: main.mdc
.gemini/: settings.json
.github/: SECURITY.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  task.yml
.github/rulesets/: main.json
.github/workflows/: ci.yml  template-sync.yml
docs/: README.md
docs/adr/: 0001-distribution-and-adoption.md  0002-language-policy.md  0003-adoption-judge-permanent.md  0004-stack-profiles.md  0005-agents-md-canonical-pointers.md  0006-direct-push-workflow.md  0007-tools-lint-gate.md  0008-docs-integrity-checks.md  INDEX.md  TEMPLATE.md
docs/conventions/: architecture.md  coding.md  docs-rules.md
docs/governance/: principles.md  rubric.md  tech-radar.md
docs/governance/intake/: 2026-07-09-agents-md-canonical.md  2026-07-09-ai-review-advisory.md  2026-07-09-architecture-fitness-functions.md  2026-07-09-context-budget-enforcement.md  TEMPLATE.md  (+11 more)
docs/handoffs/: 2026-07-14-guard-gaps-from-rutirise-audit.md  2026-07-22-guard-gaps-followup-from-rutirise-audit.md
docs/playbooks/: parallel-agents.md  production-writes.md  task-decomposition.md
profiles/: README.md
profiles/docs/: Makefile.profile  PROFILE.md  README-profile.md  structure-config.example.md
profiles/python/: Makefile.profile  PROFILE.md  README-profile.md  pyproject.toml
profiles/python/src/app/: __init__.py  api.py  models.py  services.py
profiles/python/tests/: test_services.py
profiles/typescript/: .dependency-cruiser.cjs  Makefile.profile  PROFILE.md  README-profile.md  biome.json  package.json  tsconfig.json  vitest.config.ts
tools/: adopt.sh  bootstrap.sh  check_structure.py  test_check_structure.py
tools/githooks/: pre-commit
(+4 files in other folders)
